--- a/src/components/VideoList.scss
+++ b/src/components/VideoList.scss
@@ -13,6 +13,11 @@
 		width:100%;
 		transition:transform .5s;
 		white-space: nowrap;
+		-ms-overflow-style: none;  // IE 10+
+		overflow: -moz-scrollbars-none;  // Firefox
+		&::-webkit-scrollbar {
+			display: none;
+		}
 
 		&.ttp__playlist--hidden{
 		    transform: translateY(100%) !important;
